PA3/tests/bad/bad_inherit.cl
class A inherits C {
	
};

class B inherits D {

};

class Q inherits Int {

};

class P inherits String {

};

class R inherits Bool {

};

class P inherits Bool {

};

class Main {
	main() : SELF_TYPE {
		self
	};
};